Get http and grpc server address from .env file

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+APP_HTTP_ADDR="0.0.0.0:8000"
+APP_GRPC_ADDR="0.0.0.0:9000"
 APP_DATABASE_SOURCE="postgresql://root@127.0.0.1:26257/defaultdb?sslmode=disable"
 APP_NSQD_ADDR="127.0.0.1:4150"
 APP_LOOKUPD_ADDR="127.0.0.1:4161"
