--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,21 +1,21 @@
 server:
   http:
-    addr: 0.0.0.0:8000
+    addr: ${HTTP_ADDR:0.0.0.0:8000}
     timeout: 1s
   grpc:
-    addr: 0.0.0.0:9000
+    addr: ${GRPC_ADDR:0.0.0.0:9000}
     timeout: 1s
 data:
   database:
     driver: postgres
-    source: "${DATABASE_SOURCE}"
+    source: "${DATABASE_SOURCE:postgresql://root@127.0.0.1:26257/defaultdb?sslmode=disable}"
   # redis:
   #   addr: 127.0.0.1:6379
   #   read_timeout: 0.2s
   #   write_timeout: 0.2s
   mq:
-    nsqd_addr: "${NSQD_ADDR}"
-    lookupd_addr: "${LOOKUPD_ADDR}"
+    nsqd_addr: "${NSQD_ADDR:127.0.0.1:4150}"
+    lookupd_addr: "${LOOKUPD_ADDR:127.0.0.1:4161}"
     topics:
       greeting_events:
         topic: "greeting_topic"
